Add e-type expansion to docs

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -622,6 +622,16 @@
 %     text of an~\tn{edef}, and the expansion is passed to the function as
 %     a braced token list.  Expansion takes place until only unexpandable
 %     tokens are left.  |x|-type arguments cannot be nested.
+%   \item[e]  Fully-expanded token or braced token list which does
+%     not require doubled |#| tokens. This expansions is very similar
+%     to |x|-type but may be nested and does not require that |#|
+%     tokens are doubled.
+%   \item[f] Expanding the first token recursively in a braced token
+%     list.\\ Almost the same as the |x| type except here the token list
+%     is expanded fully until the first unexpandable token is found and
+%     the rest is left unchanged. Note that if this function finds a
+%     space at the beginning of the argument it gobbles it and does not
+%     expand the next token.
 %   \item[o]  One-level-expanded token or braced token list.\\
 %     This means that the argument is expanded one level, as by
 %     \tn{expandafter}, and the expansion is passed to the function as a
@@ -629,12 +639,6 @@
 %     token list then only the first token in that list is expanded.
 %     In general, using \texttt{V} should be preferred to using
 %     \texttt{o} for simple variable retrieval.
-%   \item[f] Expanding the first token recursively in a braced token
-%     list.\\ Almost the same as the |x| type except here the token list
-%     is expanded fully until the first unexpandable token is found and
-%     the rest is left unchanged. Note that if this function finds a
-%     space at the beginning of the argument it gobbles it and does not
-%     expand the next token.
 % \end{description}
 %
 % \subsection{Simpler means better}
