Move \<var>_sign:n to stable

--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -550,6 +550,16 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\fp_sign:n}
+%   Trivial but useful.  See the implementation of \cs{fp_add:Nn} for an
+%   explanation of why to use \cs{@@_parse:n}, namely, for better error
+%   reporting.
+%    \begin{macrocode}
+\cs_new:Npn \fp_sign:n #1
+  { \fp_to_decimal:n { sign \@@_parse:n {#1} } }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}[EXP]{\fp_abs:n}
 %   Trivial but useful.  See the implementation of \cs{fp_add:Nn} for an
 %   explanation of why to use \cs{@@_parse:n}, namely, for better error
