--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -457,6 +457,14 @@
 %   an \meta{internal dimension}.
 % \end{function}
 %
+% \begin{function}[EXP, added = 2018-11-03]{\dim_sign:n}
+%   \begin{syntax}
+%     \cs{dim_sign:n} \Arg{dimexpr}
+%   \end{syntax}
+%   Evaluates the \meta{dimexpr} then leaves $1$ or $0$ or $-1$ in the
+%   input stream according to the sign of the result.
+% \end{function}
+%
 % \begin{function}[EXP]{\dim_use:N, \dim_use:c}
 %   \begin{syntax}
 %     \cs{dim_use:N} \meta{dimension}
@@ -1649,6 +1657,36 @@
   { { \__kernel_chk_expr:nNnN {#1} \@@_eval:w { } \dim_eval:n } }
 \cs_new:Npn \dim_eval:n #1
   { \dim_use:N \@@_eval:w #1 \@@_eval_end: }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}[EXP]{\dim_sign:n, \@@_sign:Nw}
+%   See \cs{dim_abs:n}.  Contrarily to \cs{int_sign:n} the case of a
+%   zero dimension cannot be distinguished from a positive dimension by
+%   looking only at the first character, since |0.2pt| and |0pt| start
+%   the same way.  We need explicit comparisons.  We start by
+%   distinguishing the most common case of a positive dimension.
+%    \begin{macrocode}
+\__kernel_patch_args:nNNpn
+  { { \__kernel_chk_expr:nNnN {#1} \@@_eval:w { } \dim_sign:n } }
+\cs_new:Npn \dim_sign:n #1
+  {
+    \int_value:w \exp_after:wN \@@_sign:Nw
+      \dim_use:N \@@_eval:w #1 \@@_eval_end: ;
+    \exp_stop_f:
+  }
+\cs_new:Npn \@@_sign:Nw #1#2 ;
+  {
+    \if_dim:w #1#2 > \c_zero_dim
+      1
+    \else:
+      \if_meaning:w - #1
+        -1
+      \else:
+        0
+      \fi:
+    \fi:
+  }
 %    \end{macrocode}
 % \end{macro}
 %
