--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -72,7 +72,7 @@
 %     negation $\mathop{!}x$, conjunction
 %     $x\mathop{\&\&}y$, disjunction $x\mathop{\vert\vert}y$, ternary
 %     operator $x\mathop{?}y\mathop{:}z$.
-%   \item Exponentials: $\exp x$, $\ln x$, $x^y$.
+%   \item Exponentials: $\exp x$, $\ln x$, $x^y$, $\operatorname{logb} x$.
 %   \item Integer factorial: $\operatorname{fact} x$.
 %   \item Trigonometry: $\sin x$, $\cos x$, $\tan x$, $\cot x$, $\sec
 %     x$, $\csc x$ expecting their arguments in radians, and
@@ -1075,6 +1075,19 @@
 %   $\ln(+0) = -\infty$.  \enquote{Underflow} and \enquote{overflow}
 %   occur when appropriate.  If the operand is a tuple, \enquote{invalid
 %   operation} occurs.
+% \end{function}
+%
+% \begin{function}[EXP, added = 2018-11-03]{logb}
+%   \begin{syntax}
+%     \cs{fp_eval:n} \{ |logb(| \meta{fpexpr} |)| \}
+%   \end{syntax}
+%   Determines the exponent of the \meta{fpexpr}, namely the floor of
+%   the base-$10$ logarithm of its absolute value.  \enquote{Division by
+%   zero} occurs when evaluating $\operatorname{logb}(\pm 0) = -\infty$.
+%   Other special values are $\operatorname{logb}(\pm\infty)=+\infty$
+%   and $\operatorname{logb}(\nan{})=\nan{}$.  If the operand is a tuple
+%   or is \nan{}, then \enquote{invalid operation} occurs and the result
+%   is \nan{}.
 % \end{function}
 %
 % \begin{function}[tested = m3fp-logic002]{max, min}
