--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -358,7 +358,11 @@
 %
 % \section{Additions to \pkg{l3intarray}}
 %
-% \begin{function}[added = 2018-05-05]{\intarray_gset_rand:Nnn, \intarray_gset_rand:Nn}
+% \begin{function}[added = 2018-05-05]
+%   {
+%     \intarray_gset_rand:Nnn, \intarray_gset_rand:cnn,
+%     \intarray_gset_rand:Nn, \intarray_gset_rand:cn
+%   }
 %   \begin{syntax}
 %     \cs{intarray_gset_rand:Nnn} \meta{intarray~var} \Arg{minimum} \Arg{maximum}
 %     \cs{intarray_gset_rand:Nn} \meta{intarray~var} \Arg{maximum}
