--- a/l3experimental/l3sys-shell/l3sys-shell.dtx
+++ b/l3experimental/l3sys-shell/l3sys-shell.dtx
@@ -100,9 +100,9 @@
 %   attempted.
 % \end{function}
 %
-% \begin{function}[added = 2018-07-28]{\sys_shell_get_pwd:N}
+% \begin{function}[added = 2018-07-28]{\sys_get_shell_pwd:N}
 %   \begin{syntax}
-%     \cs{sys_shell_get_pwd:N} \meta{str var}
+%     \cs{sys_get_shell_pwd:N} \meta{str var}
 %   \end{syntax}
 %   Sets the \meta{str var} to the present working directory (the output of
 %   |pwd| on Unix or |cd| on Windows). Note that on Windows this will contain
@@ -300,17 +300,17 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\sys_shell_get_pwd:N}
+% \begin{macro}{\sys_get_shell_pwd:N}
 %   Getting the path is easy: the main work is avoiding loosing any
 %   information. (This information can be obtained using the recorder file:
 %   that does not require shell escape. However, it's hard to see how it might
 %   be useful without the other file functions.)
 %    \begin{macrocode}
-\cs_new_protected:Npx \sys_shell_get_pwd:N #1
+\cs_new_protected:Npx \sys_get_shell_pwd:N #1
   {
     \sys_if_shell_unrestricted:T
       {
-        \exp_not:N \sys_shell_get:nnN
+        \exp_not:N \sys_get_shell:nnN
           {
             \sys_if_platform_unix:T { pwd }
             \sys_if_platform_windows:T { cd }
@@ -340,7 +340,7 @@
   {
     \sys_if_shell_unrestricted:T
       {
-        \exp_not:N \sys_shell_get:nnN
+        \exp_not:N \sys_get_shell:nnN
           {
             \sys_if_platform_unix:T { ls~-1~ #1 }
             \sys_if_platform_windows:T { dir~/b~ #1 }
