--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -769,6 +769,28 @@
 %   This is not available in older versions of \XeTeX{}.
 % \end{function}
 %
+% \begin{function}[added = 2019-05-13, updated = 2019-09-20, pTF, EXP]
+%   {\file_compare_timestamp:nNn}
+%   \begin{syntax}
+%     \cs{file_compare_timestamp:nNn} \Arg{file-1} \meta{comparator} \Arg{file-2} \Arg{true code} \Arg{false code}
+%   \end{syntax}
+%   Compares the file stamps on the two \meta{files} as indicated by
+%   the \meta{comparator}, and inserts either the \meta{true code}
+%   or \meta{false case} as required. A file which is not found
+%   is treated as older than any file which is found. This allows for
+%   example the construct
+%   \begin{verbatim}
+%     \file_compare_timestamp:nNnT { source-file } > { derived-file }
+%       {
+%         % Code to regenerate derived file
+%       }
+%   \end{verbatim}
+%   to work when the derived file is entirely absent. The timestamp
+%   of two absent files is regarded as different.
+%   This is not available in older versions of \XeTeX{}.
+% \end{function}
+%
+%
 % \begin{function}[updated = 2017-06-26]{\file_input:n}
 %   \begin{syntax}
 %     \cs{file_input:n} \Arg{file name}
@@ -2842,6 +2864,106 @@
                 { size } { size }
               }
           }
+        \prg_return_false:
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+
+% \begin{macro}[EXP]{\@@_str_cmp:nn}
+% \begin{macro}[EXP]{\@@_str_escape:n}
+%   As we are doing a fixed-length \enquote{big} integer comparison, it
+%   is easiest to use the low-level behavior  of string comparisons.
+%    \begin{macrocode}
+\cs_new:Npn \@@_str_cmp:nn #1#2 { \tex_strcmp:D {#1} {#2} }
+\sys_if_engine_luatex:T
+  {
+    \cs_set:Npn \@@_str_cmp:nn #1#2
+      {
+        \lua_now:e
+          {
+            l3kernel.strcmp
+              (
+                " \@@_str_escape:n {#1}",
+                " \@@_str_escape:n {#2}"
+              )
+          }
+      }
+   \cs_new:Npn \@@_str_escape:n #1
+     {
+       \lua_escape:e
+         { \__kernel_tl_to_str:w \use:e { {#1} } }
+     }
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}[EXP, pTF]{\file_compare_timestamp:nNn}
+% \begin{macro}[EXP]{\@@_compare_timestamp:nnN}
+% \begin{macro}[EXP]{\@@_timestamp:n}
+%   Comparison of file date can be done by using the low-level nature of the
+%   string comparison functions.
+%    \begin{macrocode}
+\prg_new_conditional:Npnn \file_compare_timestamp:nNn #1#2#3
+  { p , T , F , TF }
+  {
+    \exp_args:Nee \@@_compare_timestamp:nnN
+      { \file_full_name:n {#1} }
+      { \file_full_name:n {#3} }
+      #2
+   }
+\cs_new:Npn \@@_compare_timestamp:nnN #1#2#3
+  {
+    \tl_if_blank:nTF {#1}
+      {
+        \if_charcode:w #3 <
+          \prg_return_true:
+        \else:
+          \prg_return_false:
+        \fi:
+      }
+      {
+        \tl_if_blank:nTF {#2}
+          {
+             \if_charcode:w #3 >
+                \prg_return_true:
+              \else:
+                \prg_return_false:
+              \fi:
+          }
+          {
+            \if_int_compare:w
+              \@@_str_cmp:nn
+                { \@@_timestamp:n {#1} }
+                { \@@_timestamp:n {#2} }
+                #3 0 \exp_stop_f:
+              \prg_return_true:
+            \else:
+              \prg_return_false:
+            \fi:
+          }
+      }
+  }
+\sys_if_engine_luatex:TF
+  {
+    \cs_new:Npn \@@_timestamp:n #1
+      {
+        \lua_now:e
+          { l3kernel.filemoddate ( " \lua_escape:e {#1} " ) }
+      }
+  }
+  { \cs_new_eq:NN \@@_timestamp:n \tex_filemoddate:D }
+\cs_if_exist:NF \tex_filemoddate:D
+  {
+    \prg_set_conditional:Npnn \file_compare_timestamp:nNn #1#2#3
+      { p , T , F , TF }
+      {
+        \__kernel_msg_expandable_error:nnn
+          { kernel } { primitive-not-available }
+          { \(pdf)filemoddate }
         \prg_return_false:
       }
   }
