Add missing \end{macro}

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2969,6 +2969,7 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
 %
 % \begin{macro}[TF]{\file_if_exist:n}
 %   The test for the existence of a file is a wrapper around the function to
