--- a/l3kernel/l3fparray.dtx
+++ b/l3kernel/l3fparray.dtx
@@ -102,7 +102,8 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\fparray_new:Nn, \@@_array_new:nNNN}
+% \begin{macro}{\fparray_new:Nn, \fparray_new:cn}
+% \begin{macro}{\@@_array_new:nNNN}
 %   Build a three token token list, then define all three tokens to be
 %   integer arrays of the same size.  No need to initialize the data:
 %   the integer arrays start with zeros, and three zeros denote
@@ -120,6 +121,7 @@
     \exp_last_unbraced:Nfo \@@_array_new:nNNNN
       { \int_eval:n {#2} } #1 #1
   }
+\cs_generate_variant:Nn \fparray_new:Nn { c }
 \cs_new_protected:Npn \@@_array_new:nNNNN #1#2#3#4#5
   {
     \int_compare:nNnTF {#1} < 0
@@ -136,8 +138,9 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
-% \begin{macro}[EXP]{\fparray_count:N}
+% \begin{macro}[EXP]{\fparray_count:N, \fparray_count:c}
 %   Size of any of the intarrays, here we pick the third.
 %    \begin{macrocode}
 \cs_new:Npn \fparray_count:N #1
@@ -145,6 +148,7 @@
     \exp_after:wN \use_i:nnn
     \exp_after:wN \intarray_count:N #1
   }
+\cs_generate_variant:Nn \fparray_count:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -178,9 +182,10 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\fparray_gset:Nnn, \fparray_gset:cnn}
 % \begin{macro}
 %   {
-%     \fparray_gset:Nnn, \@@_array_gset:NNNNww, \@@_array_gset:w,
+%     \@@_array_gset:NNNNww, \@@_array_gset:w,
 %     \@@_array_gset_recover:Nw, \@@_array_gset_special:nnNNN,
 %     \@@_array_gset_normal:w
 %   }
@@ -196,6 +201,7 @@
     \int_value:w \int_eval:n {#2} \exp_after:wN ;
     \exp:w \exp_end_continue_f:w \@@_parse:n {#3}
   }
+\cs_generate_variant:Nn \fparray_gset:Nnn { c }
 \cs_new_protected:Npn \@@_array_gset:NNNNww #1#2#3#4#5 ; #6 ;
   {
     \@@_array_bounds:NNnTF \__kernel_msg_error:nnxxx #4 {#5}
@@ -240,7 +246,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\fparray_gzero:N}
+% \begin{macro}{\fparray_gzero:N, \fparray_gzero:c}
 %    \begin{macrocode}
 \cs_new_protected:Npn \fparray_gzero:N #1
   {
@@ -254,13 +260,19 @@
         #1
       }
   }
+\cs_generate_variant:Nn \fparray_gzero:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}[EXP]
 %   {
 %     \fparray_item:Nn,
+%     \fparray_item:cn,
 %     \fparray_item_to_tl:Nn,
+%     \fparray_item_to_tl:cn,
+%   }
+% \begin{macro}[EXP]
+%   {
 %     \@@_array_item:NwN,
 %     \@@_array_item:NNNnN,
 %     \@@_array_item:N,
@@ -276,6 +288,7 @@
     \int_value:w \int_eval:n {#2} ;
     \@@_to_decimal:w
   }
+\cs_generate_variant:Nn \fparray_item:Nn { c }
 \cs_new:Npn \fparray_item_to_tl:Nn #1#2
   {
     \exp_after:wN \@@_array_item:NwN
@@ -283,6 +296,7 @@
     \int_value:w \int_eval:n {#2} ;
     \@@_to_tl:w
   }
+\cs_generate_variant:Nn \fparray_item_to_tl:Nn { c }
 \cs_new:Npn \@@_array_item:NwN #1#2 ; #3
   {
     \@@_array_bounds:NNnTF \__kernel_msg_expandable_error:nnfff #1 {#2}
@@ -322,6 +336,7 @@
 \cs_new:Npn \@@_array_item_normal:w #1 #2#3#4#5 #6 ; #7 ; #8 ; #9
   { #9 \s_@@ \@@_chk:w 1 #1 {#8} #7 {#2#3#4#5} {#6} ; }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
