Move fparray to stable
The concept is clearly going to be useful:
one can imagine for example implementing
pgfplots data structures as fparrays.

--- a/l3kernel/l3fparray.dtx
+++ b/l3kernel/l3fparray.dtx
@@ -58,8 +58,55 @@
 % close to that of \pkg{l3intarray}.  The size of the array is fixed and
 % must be given at point of initialisation
 %
-% Currently \emph{all} functions in this module are candidates.  Their
-% documentation can be found in \pkg{l3candidates}.
+% \begin{function}[added = 2018-05-05]{\fparray_new:Nn}
+%   \begin{syntax}
+%     \cs{fparray_new:Nn} \meta{fparray~var} \Arg{size}
+%   \end{syntax}
+%   Evaluates the integer expression \meta{size} and allocates an
+%   \meta{floating point array variable} with that number of (zero)
+%   entries.  The variable name should start with |\g_| because
+%   assignments are always global.
+% \end{function}
+%
+% \begin{function}[EXP, added = 2018-05-05]{\fparray_count:N}
+%   \begin{syntax}
+%     \cs{fparray_count:N} \meta{fparray~var}
+%   \end{syntax}
+%   Expands to the number of entries in the \meta{floating point array
+%   variable}.  This is performed in constant time.
+% \end{function}
+%
+% \begin{function}[added = 2018-05-05]{\fparray_gset:Nnn}
+%   \begin{syntax}
+%     \cs{fparray_gset:Nnn} \meta{fparray~var} \Arg{position} \Arg{value}
+%   \end{syntax}
+%   Stores the result of evaluating the floating point expression
+%   \meta{value} into the \meta{floating point array variable} at the
+%   (integer expression) \meta{position}.  If the \meta{position} is not
+%   between $1$ and the \cs{fparray_count:N}, an error occurs.
+%   Assignments are always global.
+% \end{function}
+%
+% \begin{function}[added = 2018-05-05]{\fparray_gzero:N}
+%   \begin{syntax}
+%     \cs{fparray_gzero:N} \meta{fparray~var}
+%   \end{syntax}
+%   Sets all entries of the \meta{floating point array variable} to
+%   $+0$.  Assignments are always global.
+% \end{function}
+%
+% \begin{function}[EXP, added = 2018-05-05]
+%   {\fparray_item:Nn, \fparray_item_to_tl:Nn}
+%   \begin{syntax}
+%     \cs{fparray_item:Nn} \meta{fparray~var} \Arg{position}
+%   \end{syntax}
+%   Applies \cs{fp_use:N} or \cs{fp_to_tl:N} (respectively) to the
+%   floating point entry stored at the (integer expression)
+%   \meta{position} in the \meta{floating point array variable}.  If the
+%   \meta{position} is not between $1$ and the \cs{fparray_count:N}, an
+%   error occurs.
+% \end{function}
+
 %
 % \end{documentation}
 %
