Add missing \end{macro}

--- a/l3kernel/l3fparray.dtx
+++ b/l3kernel/l3fparray.dtx
@@ -292,6 +292,7 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
 %
 % \begin{macro}{\fparray_gzero:N, \fparray_gzero:c}
 %    \begin{macrocode}
