allow both l3doc dtx files to compile

--- a/l3kernel/l3doc-pkg.dtx
+++ b/l3kernel/l3doc-pkg.dtx
@@ -27,10 +27,20 @@
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
+\usepackage{framed}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
 %</driver>
+%
+% This isn't included in the typeset documentation because it's a bit
+% ugly:
+% ^^A Why? --Phelype
+%<*package>
+\ProvidesExplPackage{l3doc}{2019-08-27}{}
+  {L3 Experimental documentation package}
+%</package>
+% \fi
 %
 % \title{^^A
 %   The \pkg{l3doc} package\\ Experimental documentation features^^A
@@ -49,14 +59,6 @@
 %
 % \maketitle
 %
-% This isn't included in the typeset documentation because it's a bit
-% ugly:
-% ^^A Why? --Phelype
-%<*package>
-\ProvidesExplPackage{l3doc}{2019-08-27}{}
-  {L3 Experimental documentation package}
-%</package>
-% \fi
 %
 % \begin{documentation}
 %
