--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -980,6 +980,12 @@
 %
 % \begin{macro}[EXP, deprecated = 2021-07-01]{\c_term_ior}
 %    \begin{macrocode}
+\__kernel_patch_deprecation:nnNNpn { 2021-01-01 } { -1 }
+\cs_new_protected:Npn \c_term_ior { -1 \scan_stop: }
+%    \end{macrocode}
+% \end{macro}
+%
+%    \begin{macrocode}
 %</patches>
 %    \end{macrocode}
 %
