--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1636,7 +1636,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_initialise:n #1
   {
-    \cs_if_exist_use:cT { \c_@@_code_root_tl \l_keys_path_tl } { {#1} }
+    \cs_if_exist:cTF
+      { \c_@@_inherit_root_tl \@@_parent:o \l_keys_path_tl }
+      { \@@_execute_inherit: }
+      {
+        \tl_clear:N \l_@@_inherit_tl
+        \cs_if_exist_use:cT { \c_@@_code_root_tl \l_keys_path_tl } { {#1} }
+      }
   }
 %    \end{macrocode}
 % \end{macro}
