Allow xparse processors to depend on other arguments (fixes #629)

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -340,6 +340,7 @@
 % mailing list.
 %
 % \subsection{Default values of arguments}
+% \label{sec:defaultvaluesofarguments}
 %
 % Uppercase argument types (\texttt{O}, \texttt{D}, \ldots{}) allow to
 % specify a default value to be used when the argument is missing; their
@@ -675,6 +676,23 @@
 % would apply \cs{ProcessorA}
 % followed by \cs{ProcessorB} to the tokens grabbed by the \texttt{m}
 % argument.
+%
+% It might sometimes be useful to use the value of another argument as
+% one of the arguments of a processor.  For example, using the
+% \cs{SplitList} processor defined below,
+% \begin{verbatim}
+%   \NewDocumentCommand \foo { O{,} >{\SplitList{#1}} m } { \foobar{#2} }
+%   \foo{a,b;c,d}
+% \end{verbatim}
+% results in |\foobar| receiving the argument |{a}{b;c}{d}| because
+% \cs{SplitList} receives as its two arguments the optional one (whose
+% value here is the default, a comma) and the mandatory one.  To
+% summarize, first the arguments are searched for in the input, then any
+% default argument is determined as explained in
+% Section~\ref{sec:defaultvaluesofarguments}, then these default
+% arguments are passed to any processor.  When referring to arguments
+% (through |#1|, |#2| and so on) in a processor, the arguments used are
+% always those before applying any processor.
 %
 % \begin{variable}{\ProcessedArgument}
 %   \pkg{xparse} defines a very small set of processor functions. In the
@@ -1552,7 +1570,7 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_args_process:}
-% \begin{macro}{\@@_args_process_loop:nn, \@@_args_process_aux:n, \@@_args_process_aux:nn}
+% \begin{macro}{\@@_args_process_loop:nn, \@@_args_process_aux:n}
 %   Loop through arguments (stored in \cs{l_@@_args_tl}) and the
 %   corresponding processors (in \cs{l_@@_process_all_tl})
 %   simultaneously, apply all processors for each argument and store the
@@ -1575,9 +1593,13 @@
     \tl_put_right:No \l_@@_args_ii_tl
       { \exp_after:wN { \ProcessedArgument } }
   }
-\cs_new_protected:Npn \@@_args_process_aux:n
-  { \exp_args:No \@@_args_process_aux:nn { \ProcessedArgument } }
-\cs_new_protected:Npn \@@_args_process_aux:nn #1#2 { #2 {#1} }
+\cs_new_protected:Npn \@@_args_process_aux:n #1
+  {
+    \cs_generate_from_arg_count:NNnn \@@_tmp:w \cs_set:Npn
+      { \l_@@_current_arg_int } {#1}
+    \exp_args:NNNo \exp_after:wN \@@_tmp:w \l_@@_args_tl
+      { \ProcessedArgument }
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
