--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2607,7 +2607,7 @@
 \cs_new:Npn \@@_full_name_aux:nn #1#2
   {
     \exp_args:Ne \@@_full_name_aux:n
-      { \__kernel_file_name_quote:e { \tl_to_str:n {#2} #1 } }
+      { \__kernel_file_name_quote:e { \tl_to_str:n {#2} / #1 } }
   }
 \cs_new:Npn \@@_full_name_aux:n #1
   {
@@ -2620,7 +2620,7 @@
           }
       }
   }
-\cs_new:Npn \@@_file_name_cleanup:w #1 \@@_file_name_end:n #2 { }
+\cs_new:Npn \@@_file_name_cleanup:w #1 \@@_file_name_end: { }
 \cs_new:Npn \@@_file_name_end: { }
 %    \end{macrocode}
 %   As \TeX{} automatically adds |.tex| if there is no extension,
