Missing DocStrip guard

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -22,9 +22,9 @@
 %
 % for those people who are interested.
 %
-%<*driver|generic|package>
+%<*driver|generic|package|2ekernel>
 \def\ExplFileDate{2019-09-28}%
-%</driver|generic|package>
+%</driver|generic|package|2ekernel>
 %<*driver>
 \documentclass[full]{l3doc}
 \usepackage{graphicx}
