Pre-loader should not parse \@currnamestack

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2278,7 +2278,8 @@
 %   mode we can recover the information from the details held by
 %   \LaTeXe{} (we must be in the preamble and loaded using \tn{usepackage}
 %   or \tn{RequirePackage}). As \LaTeXe{} doesn't store directory and
-%   name separately, we stick to the same convention here.
+%   name separately, we stick to the same convention here. In pre-loading,
+%   \tn{@currnamestack} is empty so is skipped.
 %    \begin{macrocode}
 \seq_new:N \g_@@_stack_seq
 %<*package>
@@ -2301,7 +2302,10 @@
         }
     }
   \cs_if_exist:NT \@currnamestack
-    { \exp_after:wN \@@_tmp:w \@currnamestack }
+    {
+      \tl_if_empty:NF \@currnamestack
+        { \exp_after:wN \@@_tmp:w \@currnamestack }
+    }
 \group_end:
 %</package>
 %    \end{macrocode}
