--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1171,7 +1171,7 @@
 %    \begin{macrocode}
 %<*2ekernel>
 \everyjob\expandafter{\the\everyjob
-  ^^J\ExplFileDate\space L3 programming layer
+  \message{^^J\ExplFileDate\space L3 programming layer}%
 }
 %</2ekernel>
 %<*!2ekernel>
