Turn on expl3 syntax for pkg in pre-load case

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1227,6 +1227,18 @@
 \fi
 %    \end{macrocode}
 %
+% If \pkg{expl3} was pre-loaded, we now have to deal with the fact that
+% the syntax will not be activated for the package mode version:
+% simply turn it on. We use \tn{@pushfilenameaux} as a marker: it's defined
+% a little later.
+%    \begin{macrocode}
+%<*!2ekernel>
+\ifdefined\@pushfilenameaux
+  \ExplSyntaxOn
+\fi
+%</!2ekernel>
+%    \end{macrocode}
+%
 %    \begin{macrocode}
 %<@@=expl>
 %    \end{macrocode}
