Correct DocStrip guard

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1322,10 +1322,10 @@
 % A test for pre-loading: does \tn{@pushfilenameaux} already exist.
 % The alrady-loaded mechanism will handle everything now.
 %    \begin{macrocode}
-%<*package>
+%<*!2ekernel>
 \cs_if_exist:NT \@pushfilenameaux
   { \endinput }
-%</package>
+%</!2ekernel>
 %    \end{macrocode}
 %
 % \begin{macro}{\@pushfilename, \@popfilename}
