--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -295,18 +295,23 @@
 % \begin{variable}{\c_sys_jobname_str}
 %   Inherited from the \LaTeX3 name for the primitive: this needs to
 %   actually contain the text of the job name rather than the name of
-%   the primitive, of course.
+%   the primitive, of course. In package mode, there are two possibilies:
+%   we might be pre-loading, or we might be loading after pre-loading.
 %    \begin{macrocode}
 %<*initex>
-\tex_everyjob:D \exp_after:wN
-  {
-    \tex_the:D \tex_everyjob:D
-    \str_const:Nx \c_sys_jobname_str { \tex_jobname:D }
-  }
+\use:n
 %</initex>
 %<*package>
-\str_const:Nx \c_sys_jobname_str { \tex_jobname:D }
+\cs_if_exist:cTF { ver@expl3.sty }
+  { \str_const:Nx \c_sys_jobname_str { \tex_jobname:D } }
 %</package>
+  {
+    \tex_everyjob:D \exp_after:wN
+      {
+        \tex_the:D \tex_everyjob:D
+        \str_const:Nx \c_sys_jobname_str { \tex_jobname:D }
+      }
+  }
 %    \end{macrocode}
 % \end{variable}
 %
