Missing mark-up

--- a/l3kernel/l3box.dtx
+++ b/l3kernel/l3box.dtx
@@ -1027,9 +1027,9 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\box_set_ht:Nn, \box_set_ht:cn}
-% \begin{macro}{\box_set_dp:Nn, \box_set_dp:cn}
-% \begin{macro}{\box_set_wd:Nn, \box_set_wd:cn}
+% \begin{macro}{\box_set_ht:Nn, \box_set_ht:cn, \box_gset_ht:Nn, \box_gset_ht:cn}
+% \begin{macro}{\box_set_dp:Nn, \box_set_dp:cn, \box_gset_dp:Nn, \box_gset_dp:cn}
+% \begin{macro}{\box_set_wd:Nn, \box_set_wd:cn, \box_gset_wd:Nn, \box_gset_wd:cn}
 %   Setting the size whilst respecting local scope requires copying;
 %   the same issue does not come up when working globally.
 %   When debugging, the dimension expression |#2| is surrounded by
