--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -816,6 +816,8 @@
 % \begin{macro}
 %   {
 %     \coffin_set_eq:NN, \coffin_set_eq:Nc,
+%     \coffin_set_eq:cN, \coffin_set_eq:cc,
+%     \coffin_gset_eq:NN, \coffin_gset_eq:Nc,
 %     \coffin_gset_eq:cN, \coffin_gset_eq:cc
 %   }
 %   Setting two coffins equal is just a wrapper around other functions.
