Missing mark-up

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -1464,6 +1464,7 @@
 %     \exp_last_unbraced:No,
 %     \exp_last_unbraced:NV,
 %     \exp_last_unbraced:Nv,
+%     \exp_last_unbraced:Ne,
 %     \exp_last_unbraced:Nf,
 %     \exp_last_unbraced:NNo,
 %     \exp_last_unbraced:NNV,
