Load key parts of l3sys dynamically
There is a three-part split here:
- System access/engine-determined part (expl3-code)
- Dynamic data (\everyjob)
- Last-minute settings (\AtBeginDocument)

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1351,6 +1351,14 @@
 %</!2ekernel>
 %    \end{macrocode}
 %
+% Load the dynamic part of the code, either now or during the next run.
+%    \begin{macrocode}
+\cs_if_free:cTF { ver@expl3.sty }
+  { \tex_everyjob:D \exp_after:wN }
+  { \use:n }
+  { \__kernel_sys_configuration_load:n { l3sys } }
+%    \end{macrocode}
+%
 % \begin{macro}{\@pushfilename, \@popfilename}
 % \begin{macro}{\@@_status_pop:w}
 %   The idea here is to use \LaTeXe{}'s \tn{@pushfilename} and
@@ -1556,8 +1564,9 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% Load the standard back-end.
+% Load the dynamic code and standard back-end.
 %    \begin{macrocode}
+\__kernel_sys_configuration_load:n { l3sys }
 \sys_load_backend:n { }
 %    \end{macrocode}
 %
