Correct file stack when pre-loading
This is all a little tricky: may yet need further work.

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -613,9 +613,15 @@
 % \begin{variable}{\c_sys_jobname_str}
 %   Inherited from the \LaTeX3 name for the primitive: this needs to
 %   actually contain the text of the job name rather than the name of
-%   the primitive, of course.
+%   the primitive, of course.  In pre-loaded mode, the stack will need
+%   a little correction.
 %    \begin{macrocode}
 \str_const:Nx \c_sys_jobname_str { \tex_jobname:D }
+\cs_if_exist:cF { ver@expl3.sty }
+  {
+    \exp_args:Nx \__kernel_file_input_push:n { \c_sys_jobname_str }
+    \__kernel_file_input_push:n { ??? }
+  }
 %    \end{macrocode}
 % \end{variable}
 %
