Update texmf LaTeX to latex2e/latex2020 9e90a4
This enables pre-loading, but is using a totally experimental
latex.ltx!

--- a/texmf/tex/latex/base/latex.ltx
+++ b/texmf/tex/latex/base/latex.ltx
@@ -700,9 +700,9 @@
 %%% From File: ltvers.dtx
 \def\fmtname{LaTeX2e}
 \edef\fmtversion
-   {2019-10-01}
-\def\patch@level{0}
-\edef\development@branch@name{}
+   {2020-01-01}
+\def\patch@level{-1}
+\edef\development@branch@name{development \the\year-\the\month-\the\day}
 \iffalse
 \def\reserved@a#1/#2/#3\@nil{%
   \count@\year
@@ -9015,6 +9015,7 @@ Type  H <return>  for immediate help.}%
       \dh\DH\dj\DJ\l\L\ng\NG\ss\SS\th\TH}
 \protected@edef\MakeUppercase#1{\MakeUppercase{#1}}
 \protected@edef\MakeLowercase#1{\MakeLowercase{#1}}
+\input{ltexpl.ltx}
 \let\reserved@a\@filelist
 \let\reserved@b=\@undefined
 \let\reserved@c=\@undefined
