--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -806,6 +806,38 @@
 %
 % \subsubsection{Configurations}
 %
+% If there is a class option set, and recognised, we pick it up: these
+% will over-ride anything set automatically but will themsevles be
+% over-written if there is a package option.
+%    \begin{macrocode}
+\@@_finalise:n
+  {
+    \cs_if_exist:NT \@classoptionslist
+      {
+        \cs_if_eq:NNF \@classoptionslist \scan_stop:
+          {
+            \clist_map_inline:Nn \@classoptionslist
+              {
+                \str_case:nnT {#1}
+                  {
+                    { dvipdfmx }
+                      { \tl_gset:Nn \g_@@_backend_tl { dvipdfmx } }
+                    { dvips }
+                      { \tl_gset:Nn \g_@@_backend_tl { dvips } }
+                    { dvisvgm }
+                      { \tl_gset:Nn \g_@@_backend_tl { dvisvgm } }
+                    { pdftex }
+                      { \tl_gset:Nn \g_@@_backend_tl { pdfmode } }
+                    { xetex }
+                      { \tl_gset:Nn \g_@@_backend_tl { xdvipdfmx } }
+                  }
+                  { \clist_remove_all:Nn \@unusedoptionlist {#1} }
+              }
+          }
+      }
+  }
+%    \end{macrocode}
+%
 % \begin{variable}{\g_@@_backend_tl}
 %   As the backend has to be checked and possibly adjusted, the approach here
 %   is to create a variable and use that in a one-shot to set a constant.
