Typos [ci skip]

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -176,7 +176,7 @@
 %   we store our color data in \texttt{dvips} format.
 %   The \tn{current@color} needs to be \texttt{x}-expanded before
 %   \cs{@@_backend_pickup:w} breaks it apart, because for instance
-%   \pkg{xcolor} sets it to be instructions to generate a colour
+%   \pkg{xcolor} sets it to be instructions to generate a color
 %    \begin{macrocode}
 %<*package>
 \cs_new_protected:Npn \@@_backend_pickup:N #1 { }
