--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -191,7 +191,7 @@
 %     \cs{color_show:n} \Arg{name}
 %   \end{syntax}
 %   Displays the color specification stored in the \meta{name} on the
-%   terminal
+%   terminal.
 % \end{function}
 %
 % \section{Selecting colors}
