s/driver/backend/ [ci skip]

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -701,8 +701,8 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_select:}
-%   A driver-neutral location for \enquote{last minute} manipulations before
-%   handing off to the driver code.  We set the special |.| syntax here: this
+%   A backend-neutral location for \enquote{last minute} manipulations before
+%   handing off to the backend code.  We set the special |.| syntax here: this
 %   will therefore always be available. The finalisation is separate from the
 %   main function so it can also be applied to \emph{e.g.}~page color.
 %    \begin{macrocode}
@@ -716,7 +716,7 @@
 %
 % \begin{macro}{\color_select:n}
 % \begin{macro}{\color_select:nn}
-%   Parse the input expressions then get the driver to actually activate
+%   Parse the input expressions then get the backend to actually activate
 %   them.
 %    \begin{macrocode}
 \cs_new_protected:Npn \color_select:n #1
