Use correct msg function if backend is set twice

--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -399,7 +399,7 @@
   {
     \sys_finalise:
     \str_if_exist:NTF \c_sys_backend_str
-      { \__kernel_msg_error:nnxx { sys } { backend-set } }
+      { \__kernel_msg_error:nn { sys } { backend-set } }
       {
         \tl_if_blank:nF {#1}
           { \tl_set:Nn \g_@@_backend_tl {#1} }
