Store 'everyjob' set up in a tl
This avoids any issues with file locations, etc.

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1358,10 +1358,10 @@
     \tex_everyjob:D \exp_after:wN
       {
         \tex_the:D \tex_everyjob:D
-        \__kernel_sys_configuration_load:n { l3sys }
+        \sys_everyjob:
       }
   }
-  { \__kernel_sys_configuration_load:n { l3sys } }
+  { \sys_everyjob: }
 %    \end{macrocode}
 %
 % \begin{macro}{\@pushfilename, \@popfilename}
