--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2251,19 +2251,12 @@
 %     \g_file_curr_ext_str ,
 %     \g_file_curr_name_str
 %   }
-%   The name of the current file should be available at all times.
+%   The name of the current file should be available at all times:
+%   the name itself is set dynamically.
 %    \begin{macrocode}
 \str_new:N \g_file_curr_dir_str
 \str_new:N \g_file_curr_ext_str
 \str_new:N \g_file_curr_name_str
-%    \end{macrocode}
-%    The actual data has to be picked up during the run.
-%    \begin{macrocode}
-%</initex|package>
-%<*everyjob>
-\str_gset:Nx \g_file_curr_name_str { \tex_jobname:D }
-%</everyjob>
-%<*initex|package>
 %    \end{macrocode}
 % \end{variable}
 %
