--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -770,7 +770,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \sys_finalise:
   {
-    \__kernel_sys_configuration_load:n { l3sys }
+    \sys_everyjob:
     \tl_use:N \g_@@_finalise_tl
     \tl_gclear:N \g_@@_finalise_tl
   }
