Make l3doc (package) work with different classes
Currently working out-of-the-box with amsart, amsbook, article, book (and supposedly with all LaTeX base classes), ctxdoc, extarticle (and supposedly with other extclasses), jltxdoc, l3doc, ltubgoat, ltxdoc, scrartcl, scrbook. Also works, after some small hacks, with memoir, scrdoc, and ydoc.

--- a/l3kernel/l3doc-pkg.dtx
+++ b/l3kernel/l3doc-pkg.dtx
@@ -1405,8 +1405,22 @@
 %
 % \subsection{Class and package loading}
 %
+% The \pkg{doc} package redefines \cs{maketitle} so that it can be used
+% more than once to produce a single document with multiple titles. This
+% redefinition relies on the existence of \cs{@maketitle}, which often
+% is the case, but in a few circumstances the class defines a
+% self-contained \cs{maketitle}, and then \pkg{doc}'s redefinition
+% breaks. Here we nullify \pkg{doc}'s redefinition to maintain the
+% class' definition of \cs{maketitle}. However this doesn't respect
+% \pkg{doc}'s changes to \cs{maketitle}\dots{} This probably will
+% require a case-by-case patching of \cs{maketitle}.
 %    \begin{macrocode}
+\cs_new_eq:NN \@@_saved_maketitle: \maketitle
 \RequirePackage{doc}
+\cs_gset_eq:NN \maketitle \@@_saved_maketitle:
+%    \end{macrocode}
+%
+%    \begin{macrocode}
 \RequirePackage
   {
     array,% Okay
@@ -2528,7 +2542,7 @@
     \small\ttfamily
     \HD@savedestfalse
     \HD@target
-    \Hy@MakeCurrentHref { HD. \int_use:N \c@HD@hypercount }
+    % \Hy@MakeCurrentHref { HD. \int_use:N \c@HD@hypercount }
     \begin{tabular} [t] { @{} l @{} >{\hspace{\tabcolsep}} r @{} }
       \toprule
       \@@_function_extra_labels:
@@ -3546,7 +3560,7 @@
 %   file.
 %
 %    \begin{macrocode}
-\NewDocumentCommand \DocInclude { m }
+\DeclareDocumentCommand \DocInclude { m }
   {
     \relax\clearpage
     \docincludeaux
