Correct handling of extensionless-files

--- a/l3kernel/l3expan.dtx
+++ b/l3kernel/l3expan.dtx
@@ -467,6 +467,7 @@
 %     \exp_args:NVo,
 %     \exp_args:Nfo,
 %     \exp_args:Nff,
+%     \exp_args:Nee,
 %   }
 %   \begin{syntax}
 %     \cs{exp_args:Noo} \meta{token} \Arg{tokens_1} \Arg{tokens_2}
@@ -2793,7 +2794,7 @@
 %   {
 %     \exp_args:Nnc, \exp_args:Nno, \exp_args:NnV, \exp_args:Nnv, \exp_args:Nne, \exp_args:Nnf,
 %     \exp_args:Noc, \exp_args:Noo, \exp_args:Nof,
-%     \exp_args:NVo, \exp_args:Nfo, \exp_args:Nff,
+%     \exp_args:NVo, \exp_args:Nfo, \exp_args:Nff, \exp_args:Nee
 %   }
 % \begin{macro}
 %   {
@@ -2823,6 +2824,7 @@
 \@@_tmp:w { Vo }
 \@@_tmp:w { fo }
 \@@_tmp:w { ff }
+\@@_tmp:w { ee }
 \@@_tmp:w { Nx }
 \@@_tmp:w { cx }
 \@@_tmp:w { nx }
