--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2642,8 +2642,26 @@
 \cs_new:Npx \@@_file_ext_check_auxiii:nw #1#2 . #3 . #4 \q_stop
   {
     \exp_not:N \quark_if_nil:nTF {#3}
-      { \exp_not:N \__kernel_file_name_quote:n { #1 \tl_to_str:n { .tex } } }
+      {
+        \exp_not:N \exp_args:Nee \exp_not:N \@@_file_ext_check_auxiv:nn
+          { \exp_not:N \__kernel_file_name_quote:n {#1} }
+          {
+            \exp_not:N \__kernel_file_name_quote:n
+              { #1 \tl_to_str:n { .tex } }
+          }
+      }
       {#1}
+  }
+\cs_new:Npn \@@_file_ext_check_auxiv:nn #1#2
+  {
+    \tl_if_blank:eTF { \@@_file_size:n {#2} }
+      {#1}
+      {
+        \int_compare:nNnTF
+          { \@@_file_size:n {#1} } = { \@@_file_size:n {#2} }
+          {#2}
+          {#1}
+      }
   }
 %    \end{macrocode}
 %   Deal with the fact that the primitive might not be available.
