--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1043,11 +1043,18 @@
 %</package>
   }
 \cs_generate_variant:Nn \__kernel_ior_open:Nn { No }
-\cs_new_protected:Npn \@@_open_stream:Nn #1#2
+%    \end{macrocode}
+%   Here, we act defensively in case \LuaTeX{} is in use with an
+%   extensionless file name.
+%    \begin{macrocode}
+\cs_new_protected:Npx \@@_open_stream:Nn #1#2
   {
-    \tex_global:D \tex_chardef:D #1 = \l_@@_stream_tl \scan_stop:
-    \prop_gput:NVn \g_@@_streams_prop #1 {#2}
-    \tex_openin:D #1 #2 \scan_stop:
+    \tex_global:D \tex_chardef:D #1 = \exp_not:N \l_@@_stream_tl \scan_stop:
+    \prop_gput:NVn \exp_not:N \g_@@_streams_prop #1 {#2}
+    \tex_openin:D #1
+      \sys_if_engine_luatex:TF
+        { {#2} }
+        {  #2 \scan_stop: }
   }
 %    \end{macrocode}
 % \end{macro}
