--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -355,22 +355,11 @@ end
 % \end{macro}
 %
 % \begin{macro}{l3kernel.charcat}
-%   Creating arbitrary chars needs a category code table. As set up here,
-%   one may have been assigned earlier (see \pkg{l3bootstrap}) or a hard-coded
-%   one is used. The latter is intended for format mode and should be adjusted
-%   to match an eventual allocator.
+%   Creating arbitrary chars using |tex.cprint|.
 %    \begin{macrocode}
 local charcat
-if cprint then
-  function charcat(charcode, catcode)
-    cprint(catcode, utf8_char(charcode))
-  end
-else
-  local charcat_table = l3kernel.charcat_table or 1
-  function charcat(charcode, catcode)
-    setcatcode(charcat_table, charcode, catcode)
-    sprint(charcat_table, utf8_char(charcode))
-  end
+function charcat(charcode, catcode)
+  cprint(catcode, utf8_char(charcode))
 end
 l3kernel.charcat = charcat
 %    \end{macrocode}
