--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -528,7 +528,8 @@
 %     \cs{sys_if_rand_exist:TF} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests if the engine has a pseudo-random number generator.  Currently
-%   this is the case in \pdfTeX{}, \LuaTeX{}, \pTeX{} and \upTeX{}.
+%   this is the case in \pdfTeX{}, \LuaTeX{}, \pTeX{}, \upTeX{} and recent
+%   releases of \XeTeX{}.
 % \end{function}
 %
 % \section{Additions to \pkg{l3tl}}
