added Will's thoughts on hooks

--- a/discussionpapers/2019-thoughts-on-hooks.tex
+++ b/discussionpapers/2019-thoughts-on-hooks.tex
@@ -7,7 +7,7 @@
 %                        \and  
   \LaTeX{} Project Team}
 
-\date{2019-07-01}
+\date{2019-10-15}
 
 \newcounter{hook}
 \newcounter{config}
@@ -237,6 +237,46 @@ tokens. My thinking is that
 is going to be quite surprising.
 \end{comment}
 
+
+
+\subsection{Thoughts on the \cs{end} (environment) interface}
+
+From a mail by Will:
+\begin{verbatim}
+1.  It’s interesting that breqn redefines \end or now “\end “ to be:
+
+      \@namedef{end }#1{\csname end#1\endcsname \latex@end{#1}}%
+
+This allows an environment end definition like this:
+
+      \def\enddmath#1{\check@punct@or@qed}
+
+which “absorbs” the \latex@end (the #1), switches over to the aux
+ function, which is
+
+      \def\check@punct@or@qed#1{…
+         \def\finish@end{\csname end@#1\endcsname\latex@end{#1}}%
+         \check@punct
+      }
+
+which allows \futurelet lookahead and all that, using \finish@end
+ finally to tidy up the environment properly.
+
+This is all rather convoluted and very neat and tidy.
+
+As far as I know there are no incompatibilities with breqn and any
+ other major package, so the question arises whether it would be worth
+ setting up "\end “ a little more directly to allow this behaviour. Of
+ course it will slow down every environment in a document by one
+ expansion, but is that a big deal? It may well be, I don’t know.
+
+
+2.  If we build a hook into 2e to provide this, do we add an interface
+ to xparse to allow environments to lookahead? As well as being useful
+ for breqn — and it’s such a good part of breqn I’d argue it’s worth
+ breaking it out from there for xmath — wouldn’t this style of
+ lookahead be needed for LDB concepts?
+\end{verbatim}
 
 
 \section{Hooks and config points in various places}
